# hssqlppp

./: .bzrignore  .depend  .depend.mk  .exe_rules.mk  .gitignore  ArgsParser.lhs  Ast.ag  Ast.hs  AstCheckTests.lhs  AstUtils.lhs  AttributeTests.lhs  BuildDocs.lhs  CHANGES  CS.lhs  DBAccess.lhs  DatabaseLoader.lhs  DatabaseLoaderTests.lhs  DefaultScope.hs  DefaultScopeEmpty.hs  Extensions.lhs  FnTypes.ag  FnTypes.hs  FnTypes1.ag  Grammar.lhs  HsSqlPpp.lhs  HsSqlPppTests.lhs  HsSqlSystem.lhs  INSTALL  LICENSE  LexFile.lhs  Lexer.lhs  Makefile  NewParseFile.lhs  P1.lhs  P1Tests.lhs  PGTypes.ag  PGTypes.hs  ParseAndProcessFile.lhs  ParseErrors.lhs  ParseFile.lhs  (+48 more)
build-extras/: GeneratePostgresCatalog.lhs  MakeDefaultTemplate1Catalog.lhs  hssqlppp-build-extras.cabal
examples/: Experimentation.lhs  FixSqlServerTpchSyntax.lhs  GroomUtils.lhs  HsSqlSystem.lhs  Lex.lhs  LexingTest.lhs  MakeSelect.lhs  PPPTest.lhs  Parse.lhs  Parse2.lhs  Parse3.lhs  QQ.lhs  Reformat.lhs  RunWrappers.lhs  ShowCatalog.lhs  TypeCheck.lhs  TypeCheck2.lhs  TypeCheck3.lhs  TypeCheckDB.lhs  hssqlppp-examples.cabal  index.txt
examples/Database/HsSqlPpp/DevelTools/: DoChaosSql.lhs  MakeAntiNodes.lhs  MakeWebsite.lhs  PandocUtils.lhs  ShortDefaultTemplate1Catalog.lhs  TestFileProcessor.lhs
examples/Database/HsSqlPpp/Examples/: AnnotateSource2.lhs  Chaos2010.lhs  ChaosExtensions.lhs  DBUtils.lhs  DatabaseLoader.lhs  MakeLabels.hs  WrapLib.lhs
examples/Database/HsSqlPpp/Examples/Extensions/: AlternateInsert.lhs  AnnotateSource2.lhs  AstUtils.lhs  CardinalityRestrict.lhs  ChaosExtensions.lhs  CreateAssertion.lhs  CreateAssertionTests.lhs  CreateVar.lhs  CreateVarSimple.lhs  DenormSyntax.lhs  Denormalized6nf.lhs  Denormalized6nfExamples.lhs  ExtendedConstraintFKTests.lhs  ExtendedConstraintTests.lhs  ExtendedConstraints.lhs  ExtensionTests.lhs  ExtensionsUtils.lhs  GeneralInclusion.lhs  InsertAlternativeSyntax.lhs  Module.lhs  Modules.lhs  ReadOnlyTables.lhs  SimplifiedCatalog.lhs  SyntaxExtensions.lhs  TableValues.lhs  TemporalData.lhs  TransitionConstraints.lhs
examples/Database/HsSqlPpp/Examples/Wrappers/: GenerateHListSourceExample.lhs  GenerateHListWrapper.lhs  GenerateTupleSourceExample.lhs  GenerateTupleWrapper.lhs  SelectRelation.lhs  ThHListExample.lhs  ThHListWrapper.lhs  ThTupleExample.lhs  ThTupleWrapper.lhs  WrapLib.lhs
examples/Database/HsSqlPpp/Tests/: ExtensionTests.lhs  LocalBindingsTests.lhs  ParameterizedStatementTests.lhs  ParserTests.lhs  QuasiQuoteTests.lhs  RoundtripTests.lhs  Tests.lhs  TypeCheckTests.lhs  TypeInferenceTests.lhs
examples/Database/HsSqlPpp/Utils/: Here.lhs
examples/chaos/: Chaos2010.lhs  index.txt
examples/chaos/Database/HsSqlPpp/Chaos/: ChaosExtensions.lhs  ChaosFiles.lhs
examples/chaos/sql/chaos/server/: Metadata.sql  TestBoards.sql
examples/dbload/Database/HsSqlPpp/DatabaseLoader/: DBUtils.lhs  DatabaseLoader.lhs
examples/extensions/: index.txt
examples/extensions/Database/HsSqlPpp/Extensions/: AlternateInsert.lhs  AstUtils.lhs  CardinalityRestrict.lhs  CreateAssertion.lhs  CreateAssertionTests.lhs  CreateVar.lhs  CreateVarSimple.lhs  DenormSyntax.lhs  Denormalized6nf.lhs  Denormalized6nfExamples.lhs  ExtensionTests.lhs  ExtensionsUtils.lhs  FreeDefinitionOrder.lhs  GeneralInclusion.lhs  Modules.lhs  SimplifiedCatalog.lhs  TemporalData.lhs  (+1 more)
examples/hssqlppputil/: HsSqlPppUtil.lhs
examples/util/: DatabaseLoader.lhs  HsSqlPppUtil.lhs
examples/wrappers/: GenerateHListWrapper.lhs  GenerateTupleSourceExample.lhs  RunWrappers.lhs  SelectRelation.lhs  ThHListExample.lhs  ThHListWrapper.lhs  ThTupleExample.lhs  ThTupleWrapper.lhs  index.txt
hssqlppp/: hssqlppp.cabal
hssqlppp-pg/: hssqlppp-pg.cabal
hssqlppp-th/: hssqlppp-th.cabal
hssqlppp-th/src/Database/HsSqlPpp/: Quote.lhs
hssqlppp-th/tests/: TestsTh.lhs
hssqlppp/src/: index.txt
hssqlppp/src/Database/HsSqlPpp/: Annotation.lhs  Ast.lhs  Catalog.lhs  Dialect.lhs  Lex.lhs  LexicalSyntax.lhs  Parse.lhs  Parser.lhs  Pretty.lhs  SqlDialect.lhs  Syntax.lhs  TypeCheck.lhs  TypeChecker.lhs  Types.lhs  Utility.lhs
hssqlppp/tests/: Tests.lhs
make-generated-website-files/: MakeGeneratedWebsiteFiles.lhs  hssqlppp-make-generated-website-files.cabal  src  tests
make-website/: MakeWebsite.lhs  TestFileProcessor.lhs  hssqlppp-make-website.cabal
make-website/Database/HsSqlPpp/: Tests
make-website/Database/HsSqlPpp/Utils/: GroomUtils.lhs  Here.lhs  Utils.lhs
make-website/Text/DocTool/: DocTool.lhs  Parser.lhs
src-extra/: hssqlppp-extra.cabal  index.txt
src-extra/chaos/: README  build.lhs  todo
src-extra/chaos/chaos/: ChaosExtensions.lhs  todo
src-extra/chaos/extensions/: ChaosExtensions.lhs
src-extra/chaos/h7c/: h7c.cabal
src-extra/chaos/ui/: notes
src-extra/chaosstuff/chaos/: build.lhs
src-extra/devel-util/: GenerateExeRules.lhs  GetImports.lhs  MakeAntiNodes.lhs  MakeAntiNodesRunner.lhs  MakeDefaultTemplate1Catalog.lhs  PostprocessUuagc.lhs  UUAGCHaddocks.lhs
src-extra/docutil/: MakeWebsite.lhs  TestFileProcessor.lhs
src-extra/docutil/Text/DocTool/: DocTool.lhs
src-extra/examples/: FixSqlServerTpchSyntax.lhs  Lex.lhs  MakeSelect.lhs  PPPTest.lhs  Parse.lhs  Parse2.lhs  Parse3.lhs  QQ.lhs  ShowCatalog.lhs  TypeCheck.lhs  TypeCheck2.lhs  TypeCheck3.lhs  TypeCheckDB.lhs  index.txt  tpch_q1.sql
src-extra/examples/wrappers/: ThHListExample.lhs  WrapLib.lhs
src-extra/h7c/: h7c.cabal  h7c.lhs
src-extra/h7c/Database/HsSqlPpp/: H7c.lhs
src-extra/junk/: RoundtripTests.lhs
src-extra/qq/Database/HsSqlPpp/: SqlQuote.lhs
src-extra/tests/: Tests.lhs  hssqlppp-tests.cabal
src-extra/tosort/examples/chaos/: Chaos2010.lhs
src-extra/tosort/examples/util/: HsSqlPppUtil.lhs  ParseSql.lhs  TypeCheckSql.lhs  todo
src-extra/tosort/examples/wrappers/: ConnectionString.hs  GenerateTupleWrapper.lhs  WrapLib.lhs
src-extra/tosort/util/: DevelTool.lhs  MakeAntiNodes.lhs  MakeWebsite.lhs  TestFileProcessor.lhs
src-extra/util/: AnnotateSource2.lhs  GenerateExeRules.lhs  GetImports.lhs  MakeWebsite.lhs  TestFileProcessor.lhs  TestParser.lhs
src-extra/util/Text/DocTool/: DocTool.lhs
(+961 files in other folders)
