Name:                hssqlppp
Version:             0.4.0
Synopsis:            SQL parser and type checker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
copyright:           Copyright 2009-2011 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    SQL parser and type checker, targets PostgreSQL SQL and PL/pgSQL.
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE
                     THANKS
                     --find src/ -iname '*.ag' -o -iname '.sql' -o -iname '*.txt' -o -iname '*.hs' -o -iname '*.lhs'

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     mtl >= 2.0.1.0 && < 2.1,
                     containers >= 0.3.0.0 && < 0.5,
                     parsec >= 3.1 && < 3.2,
                     pretty >= 1.1 && < 1.2,
                     syb >= 0.1.0.2 && < 0.4,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.2.2.0 && < 0.3,
                     template-haskell

  hs-source-dirs:    src
  Exposed-modules:   Database.HsSqlPpp.Ast
                     Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.Parser
                     Database.HsSqlPpp.Pretty
                     Database.HsSqlPpp.Types
                     Database.HsSqlPpp.TypeChecker
                     Database.HsSqlPpp.Quote

                     -- find src/lib -iname '*hs' | sed -e "s@src/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:     Database.HsSqlPpp.Utils.Utils
                     Database.HsSqlPpp.Parsing.ParseErrors
                     Database.HsSqlPpp.Parsing.Lexer
                     Database.HsSqlPpp.Parsing.ParserInternal
                     Database.HsSqlPpp.Internals.Catalog.CatalogInternal
                     Database.HsSqlPpp.Internals.Catalog.DefaultTemplate1Catalog
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.ErrorUtils
                     Database.HsSqlPpp.Internals.TypeChecking.LocalBindings
                     Database.HsSqlPpp.Internals.TypeChecking.Utils
                     Database.HsSqlPpp.Internals.TypeChecking.IDEnv
                     Database.HsSqlPpp.Internals.TypeChecking.LocalBindingsInternal
                     Database.HsSqlPpp.Internals.AstAnnotation
                     Database.HsSqlPpp.Internals.AnnotationUtils
                     Database.HsSqlPpp.Internals.AstInternal
                     Database.HsSqlPpp.Internals.TypeType

  extensions:        TupleSections
                     DeriveDataTypeable,
                     ScopedTypeVariables,
                     PatternGuards,
                     FlexibleContexts
