Name:                hssqlppp
Version:             0.4.2
Synopsis:            SQL parser and type checker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2014 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    SQL parser and type checker, targets PostgreSQL SQL and PL/pgSQL.
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE
                     THANKS
                     --find src/ -iname '*.ag' -o -iname '.sql' -o -iname '*.txt' -o -iname '*.hs' -o -iname '*.lhs'

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     mtl >= 2.2 && < 2.3,
                     containers >= 0.3.0.0 && < 0.6,
                     parsec >= 3.1 && < 3.2,
                     pretty >= 1.1 && < 1.2,
                     syb >= 0.4 && < 0.5,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.4 && < 0.5,
                     template-haskell

  default-language:  Haskell2010
  hs-source-dirs:    src
  Exposed-modules:   Database.HsSqlPpp.Ast
                     Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.Parser
                     Database.HsSqlPpp.Pretty
                     Database.HsSqlPpp.Types
                     Database.HsSqlPpp.TypeChecker
                     Database.HsSqlPpp.Quote

                     -- find src/lib -iname '*hs' | sed -e "s@src/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:     Database.HsSqlPpp.Utils.Utils
                     Database.HsSqlPpp.Parsing.ParseErrors
                     Database.HsSqlPpp.Parsing.Lexer
                     Database.HsSqlPpp.Parsing.ParserInternal
                     Database.HsSqlPpp.Internals.Catalog.CatalogInternal
                     Database.HsSqlPpp.Internals.Catalog.DefaultTemplate1Catalog
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.ErrorUtils
                     Database.HsSqlPpp.Internals.TypeChecking.LocalBindings
                     Database.HsSqlPpp.Internals.TypeChecking.Utils
                     Database.HsSqlPpp.Internals.TypeChecking.IDEnv
                     Database.HsSqlPpp.Internals.TypeChecking.LocalBindingsInternal
                     Database.HsSqlPpp.Internals.AstAnnotation
                     Database.HsSqlPpp.Internals.AnnotationUtils
                     Database.HsSqlPpp.Internals.AstInternal
                     Database.HsSqlPpp.Internals.TypeType

Test-Suite Tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.lhs
  hs-source-dirs:      src,
                       src-extra/tests,
                       src-extra/util
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       HUnit >= 1.2 && < 1.3,
                       test-framework >= 0.8 && < 0.9,
                       test-framework-hunit >= 0.3 && < 0.4,
                       groom >= 0.1 && < 0.2
  Other-Modules:       Database.HsSqlPpp.Tests.TypeChecking.Insert
                       Database.HsSqlPpp.Tests.TypeChecking.Misc
                       Database.HsSqlPpp.Tests.TypeChecking.Into
                       Database.HsSqlPpp.Tests.TypeChecking.Literals
                       Database.HsSqlPpp.Tests.TypeChecking.RowCtors
                       Database.HsSqlPpp.Tests.TypeChecking.SpecialFunctions
                       Database.HsSqlPpp.Tests.TypeChecking.Plpgsql
                       Database.HsSqlPpp.Tests.TypeChecking.SimpleExpressions
                       Database.HsSqlPpp.Tests.TypeChecking.MiscExpressions
                       Database.HsSqlPpp.Tests.TypeChecking.Joins
                       Database.HsSqlPpp.Tests.TypeChecking.Qualification
                       Database.HsSqlPpp.Tests.TypeChecking.TableRefTests
                       Database.HsSqlPpp.Tests.TypeChecking.Update
                       Database.HsSqlPpp.Tests.TypeChecking.CombineSelects
                       Database.HsSqlPpp.Tests.TypeChecking.MiscSelects
                       Database.HsSqlPpp.Tests.TypeChecking.Drops
                       Database.HsSqlPpp.Tests.TypeChecking.CatalogChaining
                       Database.HsSqlPpp.Tests.TypeChecking.Delete
                       Database.HsSqlPpp.Tests.TypeChecking.SelectFrom
                       Database.HsSqlPpp.Tests.TypeChecking.Creates
                       Database.HsSqlPpp.Tests.TypeChecking.CaseExpressions
                       Database.HsSqlPpp.Tests.TypeChecking.TypeCheckTests
                       Database.HsSqlPpp.Tests.TypeChecking.Utils
                       Database.HsSqlPpp.Tests.TypeChecking.TypeInferenceTests
                       Database.HsSqlPpp.Tests.TypeChecking.SimpleSelects
                       Database.HsSqlPpp.Tests.TypeChecking.TpchTests
                       Database.HsSqlPpp.Tests.TypeChecking.Triggers
                       Database.HsSqlPpp.Tests.FixTree.FixUpIdentifiersTests
                       Database.HsSqlPpp.Tests.FixTree.ExplicitCasts
                       Database.HsSqlPpp.Tests.Tests
                       Database.HsSqlPpp.Tests.TestUtils
                       Database.HsSqlPpp.Tests.QuasiQuoteTests
                       Database.HsSqlPpp.Tests.Parsing.Dml
                       Database.HsSqlPpp.Tests.Parsing.Misc
                       Database.HsSqlPpp.Tests.Parsing.Plpgsql
                       Database.HsSqlPpp.Tests.Parsing.CreateTable
                       Database.HsSqlPpp.Tests.Parsing.FunctionsDdl
                       Database.HsSqlPpp.Tests.Parsing.Selects
                       Database.HsSqlPpp.Tests.Parsing.ParserTests
                       Database.HsSqlPpp.Tests.Parsing.Expressions
                       Database.HsSqlPpp.Tests.Parsing.MiscDdl
                       Database.HsSqlPpp.Tests.Parsing.Utils
                       Database.HsSqlPpp.Tests.ParameterizedStatementTests
                       Database.HsSqlPpp.Tests.TpchData
                       Database.HsSqlPpp.Utils.Here
                       Database.HsSqlPpp.Utils.PgUtils
                       Database.HsSqlPpp.Utils.CatalogReader


  other-extensions:    TupleSections,DeriveDataTypeable
  default-language:    Haskell2010
  ghc-options:         -Wall
