Name:                hssqlppp-build-extras
Version:             0.6.2
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         build some extra utils for working with hssqlppp development

executable GeneratePostgresCatalog
  main-is:             GeneratePostgresCatalog.lhs
  other-modules:       Database.HsSqlPpp.Utils.Here
  build-depends:       base >= 4 && < 5,
                       text >= 0.11.1.13 && < 1.3,
                       pretty-show >= 1.6 && < 1.10,
                       postgresql-simple >= 0.4 && < 0.7,
                       bytestring >= 0.10 && < 0.11,
                       template-haskell,
                       hssqlppp-pg
  default-language:    Haskell2010
  ghc-options:         -Wall
