Name:                hssqlppp-build-extras
Version:             0.6.2
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         build some extra utils for working with hssqlppp development

executable GeneratePostgresCatalog
  main-is:             GeneratePostgresCatalog.lhs
  other-modules:       Database.HsSqlPpp.Utils.Here
  build-depends:       base >= 4 && < 5,
                       text,
                       pretty-show,
                       postgresql-simple,
                       bytestring,
                       template-haskell,
                       hssqlppp-pg
  default-language:    Haskell2010
  ghc-options:         -Wall
