Name:                hssqlppp-examples
Version:             0.6.2
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         this cabal file is just a convenient way to build the examples


executable FixSqlServerTpchSyntax
  main-is:             FixSqlServerTpchSyntax.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall


executable Lex
  main-is:             Lex.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       pretty-show,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable LexingTest
  main-is:             LexingTest.lhs
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

executable MakeSelect
  main-is:             MakeSelect.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable PPPTest
  main-is:             PPPTest.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       Diff,
                       pretty-show,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Parse
  main-is:             Parse.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Parse2
  main-is:             Parse2.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       pretty-show,
                       haskell-src-exts,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  other-modules:       GroomUtils
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Parse3
  main-is:             Parse3.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       pretty-show,
                       haskell-src-exts,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  other-modules:       GroomUtils
  default-language:    Haskell2010
  ghc-options:         -Wall

executable QQ
  main-is:             QQ.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Reformat
  main-is:             Reformat.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ShowCatalog
  main-is:             ShowCatalog.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       pretty-show,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable TypeCheck
  main-is:             TypeCheck.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable TypeCheck2
  main-is:             TypeCheck2.lhs
  build-depends:       base >= 4 && < 5,
                       uniplate,
                       text,
                       hssqlppp == 0.6.2,
                       hssqlppp-th == 0.6.2
  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable TypeCheck3
--   main-is:             TypeCheck3.lhs
--   build-depends:       base >= 4 && < 5,
--                        uniplate,
--                        text,
--                        hssqlppp == 0.6.2,
--                        hssqlppp-th == 0.6.2
--   default-language:    Haskell2010
--   ghc-options:         -Wall

-- executable TypeCheckDB
--   main-is:             TypeCheckDB.lhs
--   build-depends:       base >= 4 && < 5,
--                        uniplate,
--                        text,
--                        hssqlppp == 0.6.2,
--                        hssqlppp-th == 0.6.2,
--                        hssqlppp-pg == 0.6.2
--   default-language:    Haskell2010
--   ghc-options:         -Wall

